Repair it first, because any hit will break it. This is because when max durability is reduced, so is current durability..

- special mob stats are now in entity configs instead of hardcoded
- made gear have similar durability to vanilla diamond gear. I gave it too much it seems
- repair station now sucks fuel only when needed

todo
- added golem boss which you can summon same as a wither but: soul sand block > iron block and mob head > bone block.

v.1.1.3
- fix day mobs config not working
- melee weapon spells can now be used on staffs too
- fix another server crash

v.1.1.2
- fix another server crash 

v.1.1.1

- fix server crash
- fixed spear of judgement missing textures

v.1.1.0 - 1.16.2 update + content additions!

WARNING: This update deletes all existing gear items! 
Unfortunately required because of the gear rework.
A clean start is recommended.

Also, update your library of exile.

This update is actually a combination of a few big updates:
- Crafting update
- Mob Update
- Area Update
- Food update

CRAFTING UPDATE:

All gears now have level ranges, so Old Boots would be lvl 0-10, but Royal boots lvl 40-50.
Each level range has its own material. You can now craft nearly all the gear of any level!
(exception are bows, crossbows and shields, sorry still waiting for fabric api to get those to work)

All gears are crafted with special ores, except cloth and leather armor, which use cloth and leather materials.

Some gears are special, and need a certain Essence to craft. Like to craft a Frost resistance ring, you need Essence of Water alongside the ores.

For a Healing Scepter, you need to fill the crafting grid with Essence of Life, etc.

Crafted items have a small chance to become unique too.
The only thing crafting items like this assures you is their level range and the gear type. 
So you can craft a lvl 10-20 Sword. But you can't be sure what rarity, affixes etc it will have.