@@ -14,6 +14,8 @@ public class ClientConfigs {
 
     public boolean SHOW_LOW_ENERGY_MANA_WARNING = true;
     public boolean RENDER_SIMPLE_MOB_BAR = true;
+    public boolean RENDER_AREA_INDICATOR = true;
+
     public int REMOVE_EMPTY_TOOLTIP_LINES_IF_MORE_THAN_X_LINES = 32;
 
     public int LEFT_VANILLA_LIKE_BARS_Y__POS_ADJUST = 0;
